[gd_scene load_steps=63 format=2]

[ext_resource path="res://images/ABC.png" type="Texture" id=1]
[ext_resource path="res://Spatial.gd" type="Script" id=2]
[ext_resource path="res://Animations/Walk.tres" type="Animation" id=3]
[ext_resource path="res://Animations/Stop.tres" type="Animation" id=4]
[ext_resource path="res://Animations/Walk_1.tres" type="Animation" id=5]
[ext_resource path="res://Animations/Question_L.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Fall_Down.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Nod.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Look_Around_R.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Jump.tres" type="Animation" id=10]
[ext_resource path="res://Animations/Run.tres" type="Animation" id=11]
[ext_resource path="res://Animations/Question_R.tres" type="Animation" id=12]
[ext_resource path="res://Animations/Shake_Head.tres" type="Animation" id=13]
[ext_resource path="res://Animations/Look_Around_L.tres" type="Animation" id=14]
[ext_resource path="res://images/icon_64U.png" type="Texture" id=15]
[ext_resource path="res://images/grass.jpg" type="Texture" id=16]
[ext_resource path="res://JoyStick.gd" type="Script" id=17]
[ext_resource path="res://images/orange_ball_01.png" type="Texture" id=18]
[ext_resource path="res://images/big_circle_N.png" type="Texture" id=19]
[ext_resource path="res://images/icon_64D.png" type="Texture" id=20]
[ext_resource path="res://images/icon_64L.png" type="Texture" id=21]
[ext_resource path="res://images/icon_64R.png" type="Texture" id=22]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://KinematicBody_003.tscn" type="PackedScene" id=24]
[ext_resource path="res://KinematicBody_002.tscn" type="PackedScene" id=25]
[ext_resource path="res://KinematicBody_001.tscn" type="PackedScene" id=26]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 1.5, 2, 1.5 )

[sub_resource type="SpatialMaterial" id=3]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 2, 1.5, 2 )

[sub_resource type="SpatialMaterial" id=5]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=12]
material = SubResource( 11 )
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=14]
material = SubResource( 13 )
size = Vector3( 0.75, 1, 0.75 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=16]
material = SubResource( 15 )
size = Vector3( 0.75, 1, 0.75 )

[sub_resource type="SpatialMaterial" id=17]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=18]
material = SubResource( 17 )
size = Vector3( 0.75, 1, 0.75 )

[sub_resource type="SpatialMaterial" id=19]
albedo_texture = ExtResource( 1 )

[sub_resource type="CubeMesh" id=20]
material = SubResource( 19 )
size = Vector3( 0.75, 1, 0.75 )

[sub_resource type="BoxShape" id=21]
extents = Vector3( 1, 2.5, 1 )

[sub_resource type="SpatialMaterial" id=22]
albedo_texture = ExtResource( 16 )
uv1_scale = Vector3( 100, 100, 0 )

[sub_resource type="PlaneMesh" id=23]
material = SubResource( 22 )
size = Vector2( 100, 100 )

[sub_resource type="DynamicFont" id=24]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=25]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=26]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=27]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=28]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=29]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=30]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=31]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=32]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=33]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=34]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=35]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=36]
size = 24
font_data = ExtResource( 23 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )
shadow_enabled = true

[node name="Spatial_Ginbal" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Spatial_Ginbal"]
transform = Transform( 1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, 0, 4, 10 )

[node name="KinematicBody_000" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="MeshInstance_Body" type="MeshInstance" parent="KinematicBody_000"]
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance_Head" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance_Arm_L1" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.1, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="MeshInstance_Arm_L2" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body/MeshInstance_Arm_L1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance_Arm_R1" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.1, 0 )
mesh = SubResource( 10 )
material/0 = null

[node name="MeshInstance_Arm_R2" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body/MeshInstance_Arm_R1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 12 )
material/0 = null

[node name="MeshInstance_Leg_L1" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -1.5, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="MeshInstance_Leg_L2" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body/MeshInstance_Leg_L1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 16 )
material/0 = null

[node name="MeshInstance_Leg_R1" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -1.5, 0 )
mesh = SubResource( 18 )
material/0 = null

[node name="MeshInstance_Leg_R2" type="MeshInstance" parent="KinematicBody_000/MeshInstance_Body/MeshInstance_Leg_R1"]
transform = Transform( 1, 0, 0, 0, 0.999999, 0, 0, 0, 0.999999, 0, -1, 0 )
mesh = SubResource( 20 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="KinematicBody_000"]
anims/Fall_Down = ExtResource( 7 )
anims/Jump = ExtResource( 10 )
anims/Look_Around_L = ExtResource( 14 )
anims/Look_Around_R = ExtResource( 9 )
anims/Nod = ExtResource( 8 )
anims/Question_L = ExtResource( 6 )
anims/Question_R = ExtResource( 12 )
anims/Run = ExtResource( 11 )
anims/Shake_Head = ExtResource( 13 )
anims/Stop = ExtResource( 4 )
anims/Walk = ExtResource( 3 )
anims/Walk_1 = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody_000"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0 )
shape = SubResource( 21 )

[node name="Camera" type="Camera" parent="KinematicBody_000"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 5, 0, 12 )
visible = false

[node name="Camera2" type="Camera" parent="KinematicBody_000"]
transform = Transform( 0.397628, 0.15933, -0.903607, 0, 0.984808, 0.173648, 0.917547, -0.0690474, 0.391587, -5, 0, 2 )
visible = false

[node name="KinematicBody_003" parent="." instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 3, 0 )

[node name="KinematicBody_002" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 3, 0 )

[node name="KinematicBody_001" parent="." instance=ExtResource( 26 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, -5 )

[node name="JoyStick" type="Node2D" parent="."]
position = Vector2( 500, 450 )
script = ExtResource( 17 )

[node name="BigCircle" type="Sprite" parent="JoyStick"]
texture = ExtResource( 19 )

[node name="SmallCircle" type="Sprite" parent="JoyStick"]
texture = ExtResource( 18 )

[node name="MeshInstance_Ground" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 23 )
material/0 = null

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 10, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_L" type="Button" parent="Node2D/VBoxContainer"]
margin_right = 316.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 24 )
text = "L: Look Around Left"
align = 0

[node name="Button_K" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 40.0
margin_right = 316.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 25 )
text = "K: Look Around Right"
align = 0

[node name="Button_M" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 80.0
margin_right = 316.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 26 )
text = "M: Shake Head"
align = 0

[node name="Button_N" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 120.0
margin_right = 316.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 27 )
text = "N: Nod"
align = 0

[node name="Button_Q" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 160.0
margin_right = 316.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 28 )
text = "Q: Question Left"
align = 0

[node name="Button_A" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 200.0
margin_right = 316.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 29 )
text = "A: Question Right"
align = 0

[node name="Button_F" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 240.0
margin_right = 316.0
margin_bottom = 276.0
custom_fonts/font = SubResource( 30 )
text = "F: Fall Down"
align = 0

[node name="Button_W" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 280.0
margin_right = 316.0
margin_bottom = 316.0
custom_fonts/font = SubResource( 31 )
text = "W: Walk #1"
align = 0

[node name="Button_E" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 320.0
margin_right = 316.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 32 )
text = "E: Walk #2"
align = 0

[node name="Button_R" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 360.0
margin_right = 316.0
margin_bottom = 396.0
custom_fonts/font = SubResource( 33 )
text = "R: Run"
align = 0

[node name="Button_J" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 400.0
margin_right = 316.0
margin_bottom = 436.0
custom_fonts/font = SubResource( 34 )
text = "J: Jump"
align = 0

[node name="Button_S" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 440.0
margin_right = 316.0
margin_bottom = 476.0
custom_fonts/font = SubResource( 35 )
text = "S: Stop"
align = 0

[node name="Button_0" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 480.0
margin_right = 316.0
margin_bottom = 516.0
custom_fonts/font = SubResource( 36 )
text = "0 - 9: Change Textures"
align = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Node2D/VBoxContainer"]
margin_top = 520.0
margin_right = 316.0
margin_bottom = 590.0

[node name="Button_UP" type="Button" parent="Node2D/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 15 )

[node name="Button_LEFT" type="Button" parent="Node2D/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
icon = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_RIGHT" type="Button" parent="Node2D/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 236.0
margin_bottom = 70.0
icon = ExtResource( 22 )

[node name="Button_DOWN" type="Button" parent="Node2D/VBoxContainer/HBoxContainer"]
margin_left = 240.0
margin_right = 316.0
margin_bottom = 70.0
icon = ExtResource( 20 )
[connection signal="pressed" from="Node2D/VBoxContainer/Button_L" to="." method="_on_Button_L_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_K" to="." method="_on_Button_K_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_M" to="." method="_on_Button_M_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_N" to="." method="_on_Button_N_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_Q" to="." method="_on_Button_Q_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_A" to="." method="_on_Button_A_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_F" to="." method="_on_Button_F_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_W" to="." method="_on_Button_W_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_E" to="." method="_on_Button_E_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_R" to="." method="_on_Button_R_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_J" to="." method="_on_Button_J_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_S" to="." method="_on_Button_S_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/Button_0" to="." method="_on_Button_0_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/HBoxContainer/Button_UP" to="." method="_on_Button_UP_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/HBoxContainer/Button_LEFT" to="." method="_on_Button_LEFT_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/HBoxContainer/Button_RIGHT" to="." method="_on_Button_RIGHT_pressed"]
[connection signal="pressed" from="Node2D/VBoxContainer/HBoxContainer/Button_DOWN" to="." method="_on_Button_DOWN_pressed"]

[editable path="KinematicBody_003"]

[editable path="KinematicBody_002"]

[editable path="KinematicBody_001"]
